...

//       result.fold(
//         (l) => emit(state.copyWith(isLoading: false, isSuccess: false)),
//         (r) {
//           emit(state.copyWith(isLoading: false, isSuccess: true));
//           mySnackBar(
//               context: event.context, message: "Registration Successful");
//         },
//       );
//     });
//   }
// }
import 'dart:io';
...
